@@ -1,5 +1,16 @@
 2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-1109
+
+	* src/geodetic.cc (cart2poslos): Removed a consistency check I
+	added some years ago. Now stumbled upon a case that did not show
+	consistency with the alternative way to set za. In this case the
+	alternative way clearly gave wrong result, and it seems that the
+	code change I did works better than the old (now alternative) way.
+	So removed the check.
+
+2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-1108
 
 	* controlfiles/general/general.arts: lat_true and lon_true are now
